--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,3 +1,3 @@
 <div class="container text-center">
-  <h1>Welcome to Bookers!</h1>
+  <h1>Welcome to <i class="fas fa-book"></i><strong>Bookers!</strong></h1>
 </div>
