--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,13 +1,15 @@
-<div class="container">
-  <h1>Welcome to Bookers!</h1>
+<div class="container text-center col-5 mt-2">
+  <h1>welcome to <i class="fas fa-book"></i><strong>Bookers!</strong></h1>
   
-  <p>
+  <p class="text-left">
     In Bookers,<br>
 
-you can share and exchange your opinions , inpressions , and emotions<br>
-
-about various books!<br>
-
-
+    you can share and exchange your opinions , inpressions , and emotions<br>
+    
+    about various books!<br>
   </p>
+  
+  <%= link_to "Log in", new_user_session_path, class: "btn btn-info btn-sm col-8" %><br>
+  <%= link_to "Sign up", new_user_registration_path, class: "btn btn-success mt-3 btn-sm col-8" %>
+  
 </div>
