--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
- <nav class="navbar navbar-expand-lg navbar-dark">
+ <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
     <div class="container">
       <a class="navbar-brand p-3" href="/">Bookers</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -6,35 +6,35 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
-        <%# if user_signed_in? %>
-        <!--<li class="nav-item">-->
-        <!--  <%#= link_to , class: 'text-white' do %>-->
-        <!--<i class="fas fa-book"></i>新規投稿-->
-              <%# end %>
-        <!--</li>-->
-        
-        <%# else %>
+        <% if user_signed_in? %>
         <li class="nav-item">
-          <%= link_to root_path, class: "text-white" do %>
+          <%= link_to destroy_user_session_path, method: :delete, class: 'text-white' do %>
+          <i class="fas fa-sign-out-alt"></i>Log out
+          <% end %>
+        </li>
+        <% else %>
+        <li class="nav-item">
+          <%= link_to root_path, class: "text-white mr-3" do %>
             <i class="fas fa-home"></i>Home
           <% end %>
         </li>
         <li class="nav-item">
-          <%= link_to about_path, class: 'text-white' do %>
+          <%= link_to about_path, class: 'text-white mr-3' do %>
             <i class="fas fa-link"></i>About
           <% end %>
         </li>
-        <!--<li class="nav-item">-->
-          <%#= link_to  class: 'text-white' do %>
-            <!--<i class="fas fa-user-plus"></i>Sign up-->
-          <%# end %>
-        <!--</li>-->
-        <!--<li class="nav-item">-->
-        <!--  <%#= link_to new_user_session_path, class: 'text-white' do %>-->
-        <!--<i class="fas fa-sign-out-alt"></i>Log out-->
-        <%# end %>
-        <!--</li>-->
-        <%# end %>
+        <li class="nav-item">
+          <%= link_to new_user_registration_path, class: 'text-white mr-3' do %>
+            <i class="fas fa-user-plus"></i>Sign up
+          <% end %>
+        </li>
+        <li class="nav-item">
+          <%= link_to new_user_session_path, class: 'text-white' do %>
+            <i class="fas fa-sign-in-alt"></i>Log in
+          <% end %>
+        </li>
+       
+        <% end %>
         </ul>
       </div>
     </div>
