--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,6 +7,24 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
         <% if user_signed_in? %>
+        <!--Current_userパス-->
+        <!--<li class="nav-item">-->
+        <!--  <%#= link_to user_path(current_user), class: 'text-white mr-3' do %>-->
+        <!--  <i class="fas fa-home"></i>Home-->
+        <!--  <%# end %>-->
+        <!--</li>-->
+        <!--Userパス-->
+        <!--<li class="nav-item">-->
+        <!--  <%#= link_to Users_path, class: 'text-white mr-3' do %>-->
+        <!--  <i class="fas fa-users"></i>Users-->
+        <!--  <%# end %>-->
+        <!--</li>-->
+        <!--Booksパス-->
+        <li class="nav-item">
+          <%= link_to books_path, class: 'text-white mr-3' do %>
+          <i class="fas fa-book-open"></i>>Books
+          <% end %>
+        </li>
         <li class="nav-item">
           <%= link_to destroy_user_session_path, method: :delete, class: 'text-white' do %>
           <i class="fas fa-sign-out-alt"></i>Log out
