--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
  <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
     <div class="container">
-      <a class="navbar-brand p-3" href="/">Bookers</a>
+      <a class="navbar-brand" href="/">Bookers</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -22,7 +22,7 @@
         <!--Booksパス-->
         <li class="nav-item">
           <%= link_to books_path, class: 'text-white mr-3' do %>
-          <i class="fas fa-book-open"></i>>Books
+          <i class="fas fa-book-open"></i>Books
           <% end %>
         </li>
         <li class="nav-item">
@@ -51,7 +51,7 @@
             <i class="fas fa-sign-in-alt"></i>Log in
           <% end %>
         </li>
-       
+
         <% end %>
         </ul>
       </div>
