--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -25,11 +25,12 @@
           <% @books.each do |book| %>
           <tr>
             <td>
-              <!--リンクして各Userに遷移させる-->
-              UserImage
+             <%= link_to user_path(@user) do %>
+               <%= image_tag @user.get_profile_image(50, 50) %>
+             <% end %>
             </td>
             <td>
-              <%= link_to book_path(@book) do %>
+              <%= link_to book_path(book) do %>
                 <%= book.title %>
               <% end %>
             </td>
