--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,17 +8,17 @@
         <ul class="navbar-nav ml-auto">
         <% if user_signed_in? %>
         <!--Current_userパス-->
-        <!--<li class="nav-item">-->
-        <!--  <%#= link_to user_path(current_user), class: 'text-white mr-3' do %>-->
-        <!--  <i class="fas fa-home"></i>Home-->
-        <!--  <%# end %>-->
-        <!--</li>-->
+        <li class="nav-item">
+          <%= link_to user_path(current_user), class: 'text-white mr-3' do %>
+          <i class="fas fa-home"></i>Home
+          <% end %>
+        </li>
         <!--Userパス-->
-        <!--<li class="nav-item">-->
-        <!--  <%#= link_to Users_path, class: 'text-white mr-3' do %>-->
-        <!--  <i class="fas fa-users"></i>Users-->
-        <!--  <%# end %>-->
-        <!--</li>-->
+        <li class="nav-item">
+          <%= link_to users_path, class: 'text-white mr-3' do %>
+          <i class="fas fa-users"></i>Users
+          <% end %>
+        </li>
         <!--Booksパス-->
         <li class="nav-item">
           <%= link_to books_path, class: 'text-white mr-3' do %>
