[Add]user index

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -5,14 +5,14 @@
       <%= render 'users/info', user: @user %>
       <!--render-->
       <h2>New Book</h2>
-      <%= render 'form', book_new: @book_new %>
+      <%= render 'form', book: @books %>
     </div>
-    
+
     <div class="col-1"></div>
-    
+
     <div class="col-8">
       <h2>Book detail</h2>
-      
+
       <table class="table">
         <tbody>
           <tr>
