--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,7 +1,7 @@
-<%= form_with model: book_new do |f| %>
-  <p>Title</p>
-    <%= f.text_field :title, class: 'form-control book_title' %>
-  <p>Opinion</p>
-    <%= f.text_area :body, class: 'form-control book_body' %>
+<%= form_with model: book do |f| %>
+  <%= f.label :Title %>
+  <%= f.text_field :title, class: 'form-control book_title' %>
+  <%= f.label :Opnion %>
+  <%= f.text_area :body, class: 'form-control book_body' %>
   <%= f.submit class: "btn btn-success" %>
 <% end %>
