--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,11 +1,19 @@
 <div class="container">
   <div class="row">
     <div class="col-3 mt-3">
+      <% if @book_new.errors.any? %>
+        <h3 class="mt-3"><%= @book_new.errors.count %>errors prohibited this obj from being saved:</h3>
+        <ul>
+          <% @book_new.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      <% end %>
       <%= render 'users/info', user: @user %>
 
       <!--render-->
       <h2>New Book</h2>
-      <%= render 'form', book_new: @book_new %>
+      <%= render 'form', book: @book_new %>
     </div>
 
     <div class="col-1"></div>
