--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,38 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-3">
+       <!--render-->
+      <%= render 'users/info', user: @user %>
+      <!--render-->
+      <h2>New Book</h2>
+      <%= render 'books/form', book: @book %>
+    </div>
+    
+    <div class="col-1"></div>
+    
+    <div class="col-8">
+      <h1>Users</h1>
+      <table class="table">
+        <thead>
+          <tr>
+            <th>image</th>
+            <th>name</th>
+            <th colspan=1></th>
+          </tr>
+        </thead>
+        
+        <tbody>
+          <% @users.each do |user| %>
+          <tr>
+            <td><%= image_tag user.get_profile_image(50, 50) %></td>
+            <td><%= user.name %></td>
+            <td>
+              <%= link_to "Show", user_path(user) %>
+            </td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
