--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
       <%= render 'users/info', user: @user %>
       <!--render-->
       <h2>New Book</h2>
-      <%= render 'books/form', book_new: @book_new %>
+      <%= render 'books/form', book: @book %>
     </div>
 
     <div class="col-1"></div>
@@ -17,8 +17,8 @@
        <tr>
          <tbody>
            <% @books.each do |book| %>
-             <%= book.title %>
-             <% book.body %>
+             <td><%= book.title %></td>
+             <td><% book.body %></td>
            <% end %>
          </tbody>
        </tr>
