--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="mx-auto col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0">
       <h1>Editing Book</h1>
-        <%= render 'form', book_new: @book %>
+        <%= render 'form', book: @book %>
         
         <%= link_to "Show", book_path(@book) %> |
         <%= link_to "Back", books_path %>
