--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,3 +1,12 @@
+<% if book.errors.any? %>
+    <h3 class="mt-3"><%= book.errors.count %>errors prohibited this obj from being saved:</h3>
+    <ul>
+      <% book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  <% end %>
+
 <%= form_with model: book do |f| %>
   <%= f.label :Title %>
   <%= f.text_field :title, class: 'form-control book_title' %>
