--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,14 +1,6 @@
 <div class="container">
   <div class="row">
     <div class="col-3 mt-3">
-      <% if @book_new.errors.any? %>
-        <h3 class="mt-3"><%= @book_new.errors.count %>errors prohibited this obj from being saved:</h3>
-        <ul>
-          <% @book_new.errors.full_messages.each do |message| %>
-            <li><%= message %></li>
-          <% end %>
-        </ul>
-      <% end %>
       <%= render 'users/info', user: @user %>
 
       <!--render-->
@@ -33,9 +25,10 @@
           <% @books.each do |book| %>
           <tr>
             <td>
-             <%= link_to user_path(@user) do %>
-               <%= image_tag @user.get_profile_image(50, 50) %>
-             <% end %>
+              <% user = book.user %>
+               <%= link_to user_path(user) do %>
+                 <%= image_tag user.get_profile_image(50, 50) %>
+               <% end %>
             </td>
             <td>
               <%= link_to book_path(book) do %>
