[Add]validates error

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,9 @@
 
   <body>
     <%= render 'layouts/header' %>
+    <div>
+      <p id="notice"><%= notice %></p>
+    </div>
     <%= yield %>
     <%= render 'layouts/footer'  %>
   </body>
