--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,6 +1,15 @@
 <div class="container">
   <div class="row">
     <div class="col-3 mt-3">
+      <% if @book.errors.any? %>
+        <h3 class="mt-3"><%= @book.errors.count %>errors prohibited this obj from being saved:</h3>
+        <ul>
+          <% @book.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      <% end %>
+      
       <%= render 'users/info', user: @user %>
 
       <!--render-->
