--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -30,7 +30,7 @@
             <td>
               <%= @book.body %>
             </td>
-            <% if @user == current_user %>
+            <% if @user.id == current_user.id %>
               <td><%= link_to "Edit", edit_book_path(@book), class: "btn btn-success btn-sm" %></td>
               <td><%= link_to 'Destroy', book_path(@book), method: :delete, class: "btn btn-danger btn-sm", "data-confirm" => "本当に削除しますか？" %></td>
             <% end %>
