--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -2,6 +2,14 @@
   <div class="row">
     <div class="mx-auto col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0">
       <h1>Editing Book</h1>
+      <% if @book.errors.any? %>
+        <h3 class="mt-3"><%= @book.errors.count %>errors prohibited this obj from being saved:</h3>
+        <ul>
+          <% @book.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      <% end %>
         <%= render 'form', book: @book %>
         
         <%= link_to "Show", book_path(@book) %> |
