--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -37,7 +37,7 @@
           <% end %>
         </li>
         <li class="nav-item">
-          <%= link_to about_path, class: 'text-white mr-3' do %>
+          <%= link_to home_about_path, class: 'text-white mr-3' do %>
             <i class="fas fa-link"></i>About
           <% end %>
         </li>
