--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,16 +1,14 @@
 <div class="container">
   <div class="row">
-    <div class="col-3">
+    <div class="col-md-3">
        <!--render-->
       <%= render 'users/info', user: @user %>
       <!--render-->
-      <h2>New Book</h2>
+      <h2>New book</h2>
       <%= render 'books/form', book: @book %>
     </div>
     
-    <div class="col-1"></div>
-    
-    <div class="col-8">
+    <div class="col-md-8 offset-md-1">
       <h1>Users</h1>
       <table class="table">
         <thead>
