--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -22,7 +22,11 @@
        <tbody>
           <% @books.each do |book| %>
            <tr>
-             <td><%= image_tag @user.get_profile_image(50,50) %></td>
+             <td>
+               <%= link_to user_path(@user) do %>
+                 <%= image_tag @user.get_profile_image(50,50) %>
+                <% end %>
+               </td>
              <td>
                <%= link_to book_path(book) do %>
                  <%= book.title %>
